--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -12,31 +12,31 @@
         <mat-card-content>
           <mat-form-field class="form-content__input">
             <mat-icon matPrefix>person_outline</mat-icon>
-            <input matInput placeholder="Nombre" required />
+            <input matInput placeholder="Nombre" formControlName="firstName" />
             <mat-error>El campo nombre es requerido</mat-error>
           </mat-form-field>
 
           <mat-form-field class="form-content__input">
             <mat-icon matPrefix> person_outline</mat-icon>
-            <input matInput placeholder="Apellido" required />
+            <input matInput placeholder="Apellido" formControlName="lastName" />
             <mat-error>El campo apellido es requerido</mat-error>
           </mat-form-field>
 
           <mat-form-field class="form-content__input">
             <mat-icon matPrefix>alternate_email</mat-icon>
-            <input matInput placeholder="Correo" required />
+            <input matInput placeholder="Correo" formControlName="mail" />
             <mat-error>El campo correo es requerido</mat-error>
           </mat-form-field>
 
           <mat-form-field class="form-content__input">
             <mat-icon matPrefix>person_outline </mat-icon>
-            <input matInput placeholder="Nombre de Usuario" required />
+            <input matInput placeholder="Nombre de Usuario" formControlName="username" />
             <mat-error>El campo nombre de usuario es requerido</mat-error>
           </mat-form-field>
 
           <mat-form-field class="form-content__input">
             <mat-icon matPrefix>lock</mat-icon>
-            <input matInput placeholder="Contraseña" required type="password" />
+            <input matInput placeholder="Contraseña" formControlName="password" type="password" />
             <mat-error>El campo contraseña es requerido</mat-error>
           </mat-form-field>
 
