--- a/src/app/components/mapsPrueba/maps/maps.component.html
+++ b/src/app/components/mapsPrueba/maps/maps.component.html
@@ -1,3 +1,8 @@
-<!-- <div *ngIf="apiLoaded | async">
-  <google-map></google-map>
-</div> -->
+<div>
+  <google-map
+    height="400px"
+    width="750px"
+    [center]="center"
+    [zoom]="zoom"
+    (mapClick)="moveMap($event)"></google-map>
+</div>
