--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -24,22 +24,23 @@
   border-radius: 15px;
   box-shadow: 3px 3px 8px 0px $shadow;
   border: 1px solid $border;
-  width: 1000px;
+  width: 1050px;
   align-content: flex-start;
   align-items: flex-start;
 
 
   &__button {
-    margin-top: 55px;
-    padding: 10px;
-    width: 30%;
+    margin-top: 75px;
+    padding: 4px;
+    width: 20%;
     background-color: $button;
     color: white;
   }
 }
 
 .form-content{
-  width: 100%;
+  margin-left: 40px;
+  width: 95%;
   display: flex;
 
   &__input{
@@ -51,11 +52,17 @@
     width: 50%;
   }
 
+  &__all{
+    padding-left: 25%;    
+    width: 50%;
+  }
+
   &__actions{
     display: flex;
     justify-content: right;
     padding-right: 60px;
  }
+
 }
 
 mat-card-header {
@@ -70,7 +77,5 @@ mat-form-field{
   width: 80%;
   margin-top: 0.75em;
 }
-
-// HOW TO ALIGN BUTTON POSSITION?       
 
 
