--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -4,10 +4,11 @@
       <mat-card-header>
         <mat-card-title>Registro de Datos Personales</mat-card-title>
       </mat-card-header>
+      <!-- <mat-vertical-stepper [linear]="true" #stepper> -->
       <mat-horizontal-stepper [linear]="false" #stepper>
         <mat-step [stepControl]="form">
           <form [formGroup]="form" class="form-content">
-            <ng-template matStepLabel>Agrege sus datos personales</ng-template>
+            <ng-template matStepLabel>Información personal</ng-template>
             <mat-card-content class="form-content__column">
               <!--  -->
               <mat-form-field class="form-content__input">
@@ -37,19 +38,29 @@
               </mat-form-field>
 
               <mat-form-field class="form-content__input">
+                <mat-label>DNI/CI</mat-label>
+                <input matInput placeholder="DNI/CI" formControlName="dni" />
+                <mat-error *ngIf="form.hasError('required', 'dni')">
+                  El campo de CI es requerido
+                </mat-error>
+              </mat-form-field>
+
+              <mat-form-field class="form-content__input">
                 <mat-label>Fecha de Nacimiento</mat-label>
                 <input
                   matInput
                   readonly
                   [matDatepicker]="datepicker"
-                  formControlName="birthDate" />
+                  formControlName="birthdate" />
                 <mat-datepicker-toggle
                   matSuffix
                   [for]="datepicker"></mat-datepicker-toggle>
                 <mat-datepicker #datepicker disabled="false"></mat-datepicker>
-                <!-- <mat-error> Este campo es requerido. </mat-error> -->
+                <mat-error> Este campo es requerido. </mat-error>
               </mat-form-field>
+            </mat-card-content>
 
+            <mat-card-content class="form-content__column">
               <mat-form-field class="form-content__input">
                 <mat-label>Genero</mat-label>
                 <mat-select matNativeControl required formControlName="gender">
@@ -76,30 +87,6 @@
                     >{{ maritalOption }}
                   </mat-option>
                 </mat-select>
-              </mat-form-field>
-
-              <mat-form-field class="form-content__input">
-                <input
-                  matInput
-                  placeholder="Correo Electrónico"
-                  formControlName="mail" />
-                <mat-error *ngIf="form.hasError('pattern', 'mail')">
-                  No se permiten números ni caracteres especiales en este campo.
-                </mat-error>
-                <mat-error *ngIf="form.hasError('required', 'mail')">
-                  El campo Correo Electrónico es requerido
-                </mat-error>
-              </mat-form-field>
-            </mat-card-content>
-
-            <mat-card-content class="form-content__column">
-              <!--  -->
-              <mat-form-field class="form-content__input">
-                <mat-label>DNI/CI</mat-label>
-                <input matInput placeholder="DNI/CI" formControlName="dni" />
-                <mat-error *ngIf="form.hasError('required', 'dni')">
-                  El campo de CI es requerido
-                </mat-error>
               </mat-form-field>
 
               <mat-form-field class="form-content__input">
@@ -136,13 +123,44 @@
                 </mat-error>
               </mat-form-field>
 
+              <!--           <mat-card-actions align="end"> -->
+              <mat-card-actions class="form-content__actions">
+                <button
+                  mat-raised-button
+                  matStepperNext
+                  class="card__button"
+                  [disabled]="form.invalid">
+                  Siguiente
+                </button>
+              </mat-card-actions>
+            </mat-card-content>
+          </form>
+        </mat-step>
+
+        <mat-step [stepControl]="contactForm">
+          <form [formGroup]="contactForm" class="form-content">
+            <ng-template matStepLabel> Información de contacto </ng-template>
+            <mat-card-content class="form-content__all">
+              <mat-form-field class="form-content__input">
+                <input
+                  matInput
+                  placeholder="Correo Electrónico"
+                  formControlName="mail" />
+                <mat-error *ngIf="contactForm.hasError('pattern', 'mail')">
+                  No se permiten números ni caracteres especiales en este campo.
+                </mat-error>
+                <mat-error *ngIf="contactForm.hasError('required', 'mail')">
+                  El campo Correo Electrónico es requerido
+                </mat-error>
+              </mat-form-field>
+
               <mat-form-field class="form-content__input">
                 <mat-label>Número de Telefono</mat-label>
                 <input
                   matInput
                   placeholder="Telefono"
                   formControlName="phone" />
-                <mat-error *ngIf="form.hasError('required', 'phone')">
+                <mat-error *ngIf="contactForm.hasError('required', 'phone')">
                   El campo de classification es requerido
                 </mat-error>
               </mat-form-field>
@@ -153,77 +171,20 @@
                   matInput
                   placeholder="Telefono de emergencia"
                   formControlName="emergencyPhone" />
-                <mat-error *ngIf="form.hasError('required', 'emergencyPhone')">
+                <mat-error
+                  *ngIf="contactForm.hasError('required', 'emergencyPhone')">
                   El campo Telefono de emergencia es requerido
                 </mat-error>
               </mat-form-field>
 
-              <!--           <mat-card-actions align="end"> -->
-              <mat-card-actions class="form-content__actions">
-                <button mat-raised-button matStepperNext class="card__button">
-                  Siguiente
-                </button>
-              </mat-card-actions>
-            </mat-card-content>
-          </form>
-        </mat-step>
-
-        <mat-step [stepControl]="finaltialInformationform">
-          <form [formGroup]="finaltialInformationform" class="form-content">
-            <ng-template matStepLabel>Agrege sus datos bancarios</ng-template>
-            <mat-card-content class="form-content__all">
-              <mat-form-field class="form-content__input">
-                <mat-label>Numero de Cuenta</mat-label>
-                <input
-                  matInput
-                  placeholder="Numero de Cuenta"
-                  formControlName="accountNumber" />
-              </mat-form-field>
-
-              <mat-form-field class="form-content__input">
-                <mat-label>Tipo de Cuenta</mat-label>
-                <mat-select
-                  matNativeControl
-                  required
-                  placeholder="Tipo de cuenta"
-                  formControlName="accountType">
-                  <mat-option
-                    *ngFor="let account of accountOptions"
-                    [value]="account"
-                    >{{ account }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-
-              <mat-form-field class="form-content__input">
-                <mat-label>Tipo de AFP</mat-label>
-                <mat-select
-                  matNativeControl
-                  required
-                  placeholder="Tipo de AFP"
-                  formControlName="afpType">
-                  <mat-option
-                    *ngFor="let afpOption of afpOptions"
-                    [value]="afpOption"
-                    >{{ afpOption }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-
-              <mat-form-field class="form-content__input">
-                <mat-label>Numero de NUA/CUA</mat-label>
-                <input
-                  matInput
-                  placeholder="Numero de NUA/CUA"
-                  formControlName="afpNumber" />
-              </mat-form-field>
               <div>
                 <mat-card-actions align="end">
                   <button mat-raised-button matStepperPrevious>Atras</button
                   ><button
                     mat-raised-button
                     matStepperNext
-                    class="card__button">
+                    class="card__button"
+                    [disabled]="contactForm.invalid">
                     Siguiente
                   </button>
                 </mat-card-actions>
@@ -234,9 +195,7 @@
 
         <mat-step [stepControl]="addressForm">
           <form [formGroup]="addressForm" class="form-content">
-            <ng-template matStepLabel>
-              Agrege su ubicación y dirección
-            </ng-template>
+            <ng-template matStepLabel> Ubicación </ng-template>
             <mat-card-content class="form-content__column">
               <mat-form-field class="form-content__input">
                 <mat-label>Pais</mat-label>
@@ -264,7 +223,7 @@
                 <input
                   matInput
                   placeholder="Distrito de lugar de trabajo"
-                  formControlName="city" />
+                  formControlName="district" />
                 <mat-error *ngIf="addressForm.hasError('required', 'district')">
                   El campo de Distrito es requerido
                 </mat-error>
@@ -292,15 +251,102 @@
               </mat-label>
               <div>
                 <google-map
-                  #map
-                  height="400px"
-                  width="750px"
+                  height="340px"
+                  width="450px"
                   [center]="center"
                   [zoom]="zoom"
-                  [options]="mapOptions"
                   (mapClick)="addMarker($event)">
-                  <map-marker></map-marker>
+                  <map-marker
+                    #marker="mapMarker"
+                    [position]="markerPosition"
+                    [options]="markerOptions">
+                  </map-marker>
+                  <!-- (mapClick)="openMarkerInfo(marker)"
+                  <map-info-window>
+                    {{ linkGoogleMaps }}
+                  </map-info-window> -->
                 </google-map>
+              </div>
+              <!-- <mat-card-actions class="form-content__actions"> -->
+              <div>
+                <mat-card-actions align="end">
+                  <button mat-raised-button matStepperPrevious>Atras</button
+                  ><button
+                    mat-raised-button
+                    matStepperNext
+                    class="card__button">
+                    Siguiente
+                  </button>
+                </mat-card-actions>
+              </div>
+              <!-- </mat-card-actions> -->
+            </mat-card-content>
+          </form>
+        </mat-step>
+
+        <mat-step [stepControl]="finaltialInformationForm">
+          <form [formGroup]="finaltialInformationForm" class="form-content">
+            <ng-template matStepLabel>Información bancaria</ng-template>
+            <mat-card-content class="form-content__column">
+              <mat-form-field class="form-content__input">
+                <mat-label>Numero de Cuenta</mat-label>
+                <input
+                  matInput
+                  placeholder="Numero de Cuenta"
+                  formControlName="accountNumber" />
+              </mat-form-field>
+
+              <mat-form-field class="form-content__input">
+                <mat-label>Tipo de Cuenta</mat-label>
+                <mat-select
+                  matNativeControl
+                  required
+                  placeholder="Tipo de cuenta"
+                  formControlName="accountType">
+                  <mat-option
+                    *ngFor="let account of accountOptions"
+                    [value]="account"
+                    >{{ account }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </mat-card-content>
+            <mat-card-content class="form-content__column">
+              <mat-form-field class="form-content__input">
+                <mat-label>Numero de NUA/CUA</mat-label>
+                <input
+                  matInput
+                  placeholder="Numero de NUA/CUA"
+                  formControlName="afpNumber" />
+              </mat-form-field>
+
+              <mat-form-field class="form-content__input">
+                <mat-label>Tipo de AFP</mat-label>
+                <mat-select
+                  matNativeControl
+                  required
+                  placeholder="Tipo de AFP"
+                  formControlName="afpType">
+                  <mat-option
+                    *ngFor="let afpOption of afpOptions"
+                    [value]="afpOption"
+                    >{{ afpOption }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+
+              <div>
+                <mat-card-actions align="end">
+                  <button mat-raised-button matStepperPrevious>Atras</button
+                  ><button
+                    mat-raised-button
+                    matStepperNext
+                    class="card__button"
+                    (click)="onSubmit()"
+                    [disabled]="finaltialInformationForm.invalid">
+                    Siguiente
+                  </button>
+                </mat-card-actions>
               </div>
             </mat-card-content>
           </form>
